--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,7 @@ jobs:
         run: npm ci
 
       - name: Test
-        run: |
-          npm test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
+        run: npm test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
       - name: Build
         run: |
           npm install
