--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   deploy:
+    if: github.event.head_commit.message=="Finished New Content"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
