--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+  pull_request:
+    types:
+      - closed
+
 jobs:
   deploy:
     if: github.event.head_commit.message == 'Finished New Content'
