--- a/.github/workflows/merged.yml
+++ b/.github/workflows/merged.yml
@@ -1,12 +1,13 @@
 name: Test, Build and Deploy page
 
 on:
-  push:
-    branches:
-      - main
+  pull_request:
+    types:
+      - closed
 
 jobs:
   deploy:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
