--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -12,4 +12,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: test please ignore
-        run: echo ${{  github.event.pull_request.author  }}
+        run: echo ${{  github.event.pull_request.owner  }}
