--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js 14.x
+      - name: Use Node.js 18.x
         uses: actions/setup-node@v1
         with:
-          node-version: 14.x
+          node-version: 18.x
       - uses: actions/cache@v1 # this allows for re-using node_modules caching, making builds a bit faster.
         with:
           path: ~/.npm
@@ -25,13 +25,9 @@ jobs:
         run: npm ci
 
       - name: Test
-        run: npm test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
+        run: npm run-script test:unit -- --run
       - name: Build
-        run: |
-          npm install
-          npm run-script deploy
-      - name: Make 404.html
-        run: cp docs/index.html docs/404.html
+        run: npm run-script build
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
