--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
+		"svelte-adapter-github": "^1.0.0-next.0",
 		"svelte-check": "^3.0.1",
 		"tailwindcss": "^3.2.6",
 		"tslib": "^2.4.1",
